# dateutil_gorman

./: LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/dateutil_gorman/: __init__.py  constants.py  conversion.py  parser.py  types.py
tests/: __init__.py  conftest.py  test_conversion.py  test_date_methods.py  test_gorman_week_methods.py  test_parser.py  test_replace_serialization_comparison.py  test_types.py  test_wiki_gorman_table.py
