[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dateutil-gorman"
version = "0.1.3"
description = "Utilities and value objects for working with the Gorman calendar."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Brent Garber", email = "me@bgarber.work"}
]
keywords = [
    "calendar",
    "date",
    "datetime",
    "gorman-calendar",
    "utilities",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
lint = [
    "ruff>=0.11.0",
]
typecheck = [
    "mypy>=1.10.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/BGarber42/dateutil_gorman"
Repository = "https://github.com/BGarber42/dateutil_gorman"
Issues = "https://github.com/BGarber42/dateutil_gorman/issues"
Changelog = "https://github.com/BGarber42/dateutil_gorman/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/dateutil_gorman"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/dateutil_gorman",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
